// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseChannelsList renders component 1`] = `
<Scrollbars
  autoHeight={false}
  autoHeightMax={200}
  autoHeightMin={0}
  autoHide={true}
  autoHideDuration={200}
  autoHideTimeout={500}
  hideTracksWhenNotNeeded={false}
  renderThumbHorizontal={[Function]}
  renderThumbVertical={[Function]}
  renderTrackHorizontal={[Function]}
  renderTrackVertical={[Function]}
  renderView={[Function]}
  style={
    Object {
      "height": 420,
    }
  }
  tagName="div"
  thumbMinSize={30}
  universal={false}
>
  <WithStyles(ForwardRef(List))
    disablePadding={true}
  >
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 0,
          "name": "Channel 0",
          "private": false,
          "address": "zs1testaddress0",
          "unread": 0,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-0",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="0"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 1,
          "name": "Channel 1",
          "private": true,
          "address": "zs1testaddress1",
          "unread": 1,
          "description": "Channel about 1",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-1",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="1"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 2,
          "name": "Channel 2",
          "private": false,
          "address": "zs1testaddress2",
          "unread": 2,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-2",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="2"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 3,
          "name": "Channel 3",
          "private": true,
          "address": "zs1testaddress3",
          "unread": 3,
          "description": "Channel about 3",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-3",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="3"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 4,
          "name": "Channel 4",
          "private": false,
          "address": "zs1testaddress4",
          "unread": 4,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-4",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="4"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 5,
          "name": "Channel 5",
          "private": true,
          "address": "zs1testaddress5",
          "unread": 5,
          "description": "Channel about 5",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-5",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="5"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 6,
          "name": "Channel 6",
          "private": false,
          "address": "zs1testaddress6",
          "unread": 6,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-6",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="6"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 7,
          "name": "Channel 7",
          "private": true,
          "address": "zs1testaddress7",
          "unread": 7,
          "description": "Channel about 7",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-7",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="7"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 8,
          "name": "Channel 8",
          "private": false,
          "address": "zs1testaddress8",
          "unread": 8,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-8",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="8"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 9,
          "name": "Channel 9",
          "private": true,
          "address": "zs1testaddress9",
          "unread": 9,
          "description": "Channel about 9",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-9",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="9"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 10,
          "name": "Channel 10",
          "private": false,
          "address": "zs1testaddress10",
          "unread": 10,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-10",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="10"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 11,
          "name": "Channel 11",
          "private": true,
          "address": "zs1testaddress11",
          "unread": 11,
          "description": "Channel about 11",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-11",
          },
        }
      }
      directMessages={false}
      displayAddress={false}
      key="11"
    />
  </WithStyles(ForwardRef(List))>
</Scrollbars>
`;

exports[`BaseChannelsList renders list elements with displayAddress 1`] = `
<Scrollbars
  autoHeight={false}
  autoHeightMax={200}
  autoHeightMin={0}
  autoHide={true}
  autoHideDuration={200}
  autoHideTimeout={500}
  hideTracksWhenNotNeeded={false}
  renderThumbHorizontal={[Function]}
  renderThumbVertical={[Function]}
  renderTrackHorizontal={[Function]}
  renderTrackVertical={[Function]}
  renderView={[Function]}
  style={
    Object {
      "height": 140,
    }
  }
  tagName="div"
  thumbMinSize={30}
  universal={false}
>
  <WithStyles(ForwardRef(List))
    disablePadding={true}
  >
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 0,
          "name": "Channel 0",
          "private": false,
          "address": "zs1testaddress0",
          "unread": 0,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-0",
          },
        }
      }
      directMessages={false}
      displayAddress={true}
      key="0"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 1,
          "name": "Channel 1",
          "private": true,
          "address": "zs1testaddress1",
          "unread": 1,
          "description": "Channel about 1",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-1",
          },
        }
      }
      directMessages={false}
      displayAddress={true}
      key="1"
    />
    <withRouter(undefined)
      channel={
        Immutable.Map {
          "id": 2,
          "name": "Channel 2",
          "private": false,
          "address": "zs1testaddress2",
          "unread": 2,
          "description": "",
          "keys": Immutable.Map {
            "ivk": "incoming-viewing-key-2",
          },
        }
      }
      directMessages={false}
      displayAddress={true}
      key="2"
    />
  </WithStyles(ForwardRef(List))>
</Scrollbars>
`;
